<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSkip"
        style="@style/Widget_Lumora_Button_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        android:layout_marginEnd="@dimen/spacing_16"
        android:text="@string/onboarding_btn_skip"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:contentDescription="@string/scanner_desc_close_onboarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/layoutBottom"
        app:layout_constraintTop_toBottomOf="@id/btnSkip" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/spacing_24"
        android:paddingVertical="@dimen/spacing_16"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/pageIndicator"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/onboarding_desc_pages"
            app:layout_constraintBottom_toBottomOf="@id/btnNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnNext"
            app:tabBackground="@drawable/bg_page_indicator"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            app:tabMinWidth="16dp"
            app:tabMaxWidth="16dp"
            app:tabPaddingStart="4dp"
            app:tabPaddingEnd="4dp"
            app:tabRippleColor="@android:color/transparent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            style="@style/Widget_Lumora_Button_Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_btn_next"
            android:paddingHorizontal="@dimen/spacing_32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
